--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,9 @@
 name: 'Gradle Version Plugin Checker'
 description: 'Use gradle version plugin to check if there are updates to your dependencies'
 author: 'WtfJoke'
+inputs:
+  working_directory: 
+    description: 'working directory where to execute gradle task dependencyUpdates'
 outputs:
   has_updates:
     description: 'has updates to existing dependencies'
