--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,10 +19,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
     - name: Make gradlew executable
       run: |
-        chmod +x testproject/gradlew
-        ls -la testproject/
+        cd testproject  
+        chmod +x gradlew
+        ./gradlew build
+        
     - uses: ./
       id: versionsaction
       with: 
