--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,6 +12,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
+    - name: Set up JDK 11
+      uses: actions/setup-java@v1
+      with:
+        java-version: 11
+    - name: Make gradlew executable
+      run: |
+        chmod +x demo/gradlew
     - run: |
         npm install
         npm run all
@@ -25,10 +32,7 @@ jobs:
         java-version: 11
     - name: Make gradlew executable
       run: |
-        cd demo  
-        chmod +x gradlew
-        ./gradlew build
-        
+        chmod +x demo/gradlew
     - uses: ./
       id: versionsaction
       with: 
